--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "@ouroboros/react-hooks",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"description": "Common hooks used with React",
 	"main": "index.js",
 	"types": "index.d.ts",
 	"scripts": {
 		"build": "tslint -p tsconfig.json && tsc",
-		"clean": "rm index.js index.d.ts",
+		"clean": "rm *.js *.d.ts",
 		"for_local": "npm install; tslint -p tsconfig.json && tsc; rm -Rf node_modules/@types/react node_modules/@emotion/react node_modules/@emotion/styled node_modules/react node_modules/react-dom",
 		"test": "echo \"Error: no test specified.\" && exit 1"
 	},
@@ -35,7 +35,7 @@
 		"typescript": "^4.8.3"
 	},
 	"dependencies": {
-		"@ouroboros/browser": "^0.5.1",
+		"@ouroboros/browser": "^0.5.2",
 		"@ouroboros/subscribe": "^1.3.1"
 	},
 	"peerDependencies": {
